--- a/Ghost Stories site/html/index(main).html
+++ b/Ghost Stories site/html/index(main).html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Ghost Stories/places/Poveglia</title>
-    <meta name="description" content="Read about the pague island Poveglia, known as the most haunted island in the world.">
+    <title>Ghost Stories</title>
+    <meta name="description" content="Read through ghost stories, myths, and 'games' you can play, or submit you own personal ghost stories.">
 
 
     <!-- normalize link -->
@@ -18,8 +18,7 @@
 
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="../css/nav.css">
-    <link rel="stylesheet" href="../css/places-p.css">
+    <link rel="stylesheet" href="../css/main.css">
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 
@@ -62,20 +61,19 @@
     </nav>
 
 
-    <div class="contain">
+    <div class="content">
+      <h1 class="red">Welcome to Ghost Stories</h1>
+      <img src="../pic/2beca49f12d4a216ddad78a6a6fc59be.jpeg" alt="gh logo">
 
-      <h3>Poveglia is an island in the Venice Lagoona located between Venice and Lido in the Venetian Lagoon, northern Italy.</h3>
+      <h4>Browse through the ghost stories section and see accounts from real people.</h4>
 
-      <h3>It is considered the most haunted Island in the world, with allegedly said to have hosted over 160,000 souls infected with plagues living out their final days and hours.</h3>
+      <h4>Read myths and legends connected to spirits and monsters.</h4>
 
-      <p>As Venice is an area rip with trade it has hosted many plagues and diseases. Poveglia was used many times as a quarantine area for people with plagues and at some point used to bury and possibly kill plague victims. It is said that so many people were burned and buried there during the black plague that the soil is 50% human ash.</p>
+      <h4>See how to play spiritual games and rituals such as Bloody Mary.</h4>
 
-      <p>The island is off limits to tourists and the locals give the island a wide berth. In 1922, the island became home to a mental hospital where a doctor allegedly experimented on patients with crude lobotomies.  It is said that this doctor was a butcher and torturer and after some time he threw himself from a bell tower on the island claiming that he had been driven mad by ghosts. But he survived the fall only to be strangled by a "ghostly mist" that emerged from the ground.</p>
+      <h4>Take a look at famous haunted places.</h4>
 
-      <p>The island has also hosted battles and ambushes during wars. Prisoners were taken ashore and burned. There are most likely a great number of mass graves of plague victims covering the island that have not been discovered.  </p>
-
-
-
+      <h4>Submit your own stories and experiences with ghosts, spirits, and anything out of the ordinary.</h4>
 
 
     </div>
@@ -91,6 +89,4 @@
 
 
   </body>
-
-
 </html>
