--- a/Ghost Stories site/html/places.html
+++ b/Ghost Stories site/html/places.html
@@ -21,11 +21,26 @@
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/games.css">
 
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+
+  <script type="text/javascript">
+    $(document).ready(function(){
+      $(".b-t").click(function(){
+            document.body.scrollTop = 0; // For Chrome, Safari and Opera
+            document.documentElement.scrollTop = 0; // For IE and Firefox
+          })
+    });
+
+
+  </script>
+
   </head>
   <body>
+    <div class="top">
+
 
     <nav>
-      <a href="index (main) .html">
+      <a href="index(main).html">
         <img src="../pic/a-ghost-story.jpeg" alt="gh logo">
 
         <h1>Ghost Stories </h1>
@@ -37,9 +52,9 @@
       <div class="links">
         <a href="gs.html">Submitted Ghost Stories</a>
         <a href="myth.html">Myths and Urban Legends</a>
-        <a href="games.html">Spiritual games / rituals</a>
+        <a href="games.html">Spiritual Games / Rituals</a>
         <a href="places.html">Famous Haunted Place</a>
-        <a href="sumbit.html">Submit Your own Stories</a>
+        <a href="sumbit.html">Submit Your Own Stories</a>
         <!-- <a href="#">Books</a> -->
         <!-- <a href="#"></a> -->
       </div>
@@ -48,20 +63,8 @@
 
 
     <div class="contain">
-<!--
-      <div class="left">
-        <ul>
-          <a href="#"> <li>Most Famous Haunted Places</li> </a>
-          <a href="#"> <li>United States</li> </a>
-          <a href="#"> <li>4 Star Stories</li> </a>
-          <a href="#"> <li>3 Star Stories</li> </a>
-          <a href="#"> <li>2 Star Stories</li> </a>
-          <a href="#"> <li>1 Star Stories </li> </a>
-        </ul>
 
-      <!--</div>       left contianer end -->
-
-      <h3>These are some of the most famous haunted locations in the world.  Withe some being among the most haunted places on earth.  </h3>
+      <h3>These are some of the most famous haunted locations in the world.  With some being among the most haunted places on earth.  </h3>
 
       <h4>** As with all things related to ghosts and the paranormal if you decide to visit these locations do so at your own risk.**</h4>
 
@@ -78,20 +81,16 @@
       <a href="#">Screaming Tunnel, Niagara Falls - Ontario</a>
 <!-- This one is for those brave hearts boasting hard of their fearless spirits. This is located beneath the railway track that connects Niagara falls to Toronto and New York. As per a legend about a century ago there was a farm house located just near the south entrance of this tunnel. One night the farm house caught fire and a young girl doused in flame screaming for help running wild.Nobody knows the story how the farm house caught fire. She ran through the tunnel if in case she could get some help but alas she was burnt completely and collapsed. So from that day onwards whoever tries lighting a match in the tunnel the spirit comes out screaming and haunting the person till dead.  -->
 
-
-
-       <!-- in the Venice Lagoona small island located between Venice and Lido in the Venetian Lagoon, northern Italy. A small canal divides the island into two separate parts. -->
-<!-- —also known as the most haunted island in the world.</a> -->
-  <!-- Poveglia are nearly as pervasive as the weeds, and they read like a horror story: that so many people were burned and buried there during the black plague that the soil is 50% human ash; that local fishermen give the island a wide berth for fear of netting the wave-polished bones of ancestors; that the psychiatrist who ran the mental hospital was a butcher and torturer who went mad from guilt and threw himself from the island's belltower, only to survive the fall and be strangled by a "ghostly mist" that emerged from the ground. -->
-
-  <!-- In 1922, the island became home to a mental hospital where a doctor allegedly experimented on patients with crude lobotomies. He later threw himself from the hospital tower after claiming he had been driven mad by ghosts. -->
-
-  <!-- In addition to the countless others who are supposed to have met their untimely ends on Poveglia, the octagon was used by English soldiers during the Napoleonic wars to ambush French commandos. Prisoners were taken ashore and burned (this "almost became a habit," according to one history book) and -- again, this is a rumor -- destroyed French ships still decorate the bottom of the lagoon around the octagon. -->
-
-  <!-- Venice considered itself lucky that, thanks in part to its relatively strict sanitation laws, it lost merely a third of its population during one 16th century outbreak. (The death toll on the mainland of Italy was, by comparison, far worse.) Panicked officials shipped anyone displaying symptoms of plague, be they commoners or nobility, off to the lazarettos. Doctors wore long-nosed masks stuffed with herbs in an attempt to filter sickness from the air they breathed. -->
-  <!-- Work crews on nearby Lazaretto Vecchio were digging the foundation for a new museum when they came across one such grave pit, filled with the remains of more than 1,500 plague victims. -->
-  <!-- Estimates that sound impossible but which I've seen on a number of websites, in a book and on that stupid episode of Ghost Adventures place the number of people who were burned or buried here in the hundreds of thousands.  -->
     </div>
+
+  </div>    <!-- top container end-->
+
+    <h4 class="b-t">Back to Top</h4>
+
+
+    <footer>
+        <h4>&#x000A9; Ryan Quintana</h4>
+    </footer>
 
 
 
