--- a/Ghost Stories site/html/games-bm.html
+++ b/Ghost Stories site/html/games-bm.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -20,11 +21,25 @@
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/games-bm.css">
 
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+
+  <script type="text/javascript">
+    $(document).ready(function(){
+      $(".b-t").click(function(){
+            document.body.scrollTop = 0; // For Chrome, Safari and Opera
+            document.documentElement.scrollTop = 0; // For IE and Firefox
+          })
+    });
+
+
+  </script>
+
   </head>
   <body>
+    <div class="top">
 
     <nav>
-      <a href="index (main) .html">
+      <a href="index(main).html">
         <img src="../pic/a-ghost-story.jpeg" alt="gh logo">
 
         <h1>Ghost Stories </h1>
@@ -36,16 +51,16 @@
       <div class="links">
         <a href="gs.html">Submitted Ghost Stories</a>
         <a href="myth.html">Myths and Urban Legends</a>
-        <a href="games.html">Spiritual games / rituals</a>
+        <a href="games.html">Spiritual Games / Rituals</a>
         <a href="places.html">Famous Haunted Place</a>
-        <a href="sumbit.html">Submit Your own Stories</a>
+        <a href="sumbit.html">Submit Your Own Stories</a>
         <!-- <a href="#">Books</a> -->
         <!-- <a href="#"></a> -->
       </div>
     </nav>
 
     <div class="main">
-      <h2>Bloody Mary is a well known game that is played to summon an evil spirt known as Bloody Mary.  The game has been around for a long time with many other games closely resembling it. It is played by many people mostly younger people as entertainment or for a good scare.</h2>
+      <h2>Bloody Mary is a well-known game that is played to summon an evil spirt known as Bloody Mary.  The game has been around for a long time with many other games closely resembling it. It is played by many people mostly younger people as entertainment or for a good scare.</h2>
 
       <h2>There are many different variation of how to play Bloody Mary.  I will be telling it how to play the game as I always heard of it.</h2>
 
@@ -54,7 +69,7 @@
         <li>A candle</li>
         <li>A mirror ( usually the mirror in the bathroom )</li>
         <li>A camera or cell phone to take a picture</li>
-        <li>And at least one friend.  Hopfully one who isn't a jerk and starts banging on the door to mess with you.</li>
+        <li>And at least one friend.  Hopefully one who isn't a jerk and starts banging on the door to mess with you.</li>
       </ul>
 
       <p>**This game can be played completely alone or with just one person in the bathroom.**</p>
@@ -70,10 +85,7 @@
         <li>Turning on the faucet may help call the spirit because some legends say it was the last thing Bloody Mary heard before she was murdered.</li>
         <li>Begin Chanting "Blood Mary"--The count varies but three and thirteen are the most often counts told. You can pick which ever one you want.</li>
         <li>Watch the mirror </li>
-        <ul>
-
-          <li>**Some newer version of this ritual have you take a picture with your camera or phone just after you finish chanting to see if you capture anything**</li>
-        </ul>
+        <li>**Some newer version of this ritual has you take a picture with your camera or phone just after you finish chanting to see if you capture anything**</li>
 
         <li>When you have had enough leave the bathroom</li>
       </ol>
@@ -82,6 +94,15 @@
 
       <p>What happens if you do the ritual right is told several ways. Some say mary will rip your eyes out, others say you will be found dead with claw marks, some even say she will pull you into the mirror and you will disappear forever. </p>
     </div>
+
+  </div>    <!-- top container end-->
+
+    <h4 class="b-t">Back to Top</h4>
+
+
+    <footer>
+        <h4>&#x000A9; Ryan Quintana</h4>
+    </footer>
 
 
 
