--- a/Ghost Stories site/html/games.html
+++ b/Ghost Stories site/html/games.html
@@ -21,11 +21,26 @@
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/games.css">
 
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+
+  <script type="text/javascript">
+    $(document).ready(function(){
+      $(".b-t").click(function(){
+            document.body.scrollTop = 0; // For Chrome, Safari and Opera
+            document.documentElement.scrollTop = 0; // For IE and Firefox
+          })
+    });
+
+
+  </script>
+
   </head>
   <body>
+    <div class="top">
+
 
     <nav>
-      <a href="index (main) .html">
+      <a href="index(main).html">
         <img src="../pic/a-ghost-story.jpeg" alt="gh logo">
 
         <h1>Ghost Stories </h1>
@@ -37,9 +52,9 @@
       <div class="links">
         <a href="gs.html">Submitted Ghost Stories</a>
         <a href="myth.html">Myths and Urban Legends</a>
-        <a href="games.html">Spiritual games / rituals</a>
+        <a href="games.html">Spiritual Games / Rituals</a>
         <a href="places.html">Famous Haunted Place</a>
-        <a href="sumbit.html">Submit Your own Stories</a>
+        <a href="sumbit.html">Submit Your Own Stories</a>
         <!-- <a href="#">Books</a> -->
         <!-- <a href="#"></a> -->
       </div>
@@ -47,28 +62,37 @@
 
     <div class="contain">
 
-      <h3>Below are games and rituals belived to contact, summon, or interact with spirits and the paranormal in some way.</h3>
+      <h3>Below are games and rituals believed to contact, summon, or interact with spirits and the paranormal in some way.</h3>
 
-      <h3>Play these "games" at your own risk and be careful. Especially games that have the chance to summon something more manevolent such as the oujia board.</h3>
+      <h3>Play these "games" at your own risk and be careful. Especially games that have the chance to summon something more malevolent such as the Ouija board.</h3>
 
-      <h4>** If you do decide to play I'd recommend looking up the rules on how to play these games befor you do so, just in case I missed something key about the game/ritual.**</h4>
+      <h4>** If you do decide to play I'd recommend looking up the rules on how to play these games before you do so, just in case I missed something key about the game/ritual.**</h4>
 
       <hr>
 
       <h3 class="btm">If you know any ritual/games you would like me to add please refer to the "Submit your own stories page" and send it to me the same was as a ghost story</h3>
 
       <hr>
-
       <a href="games-bm.html">Bloody Mary</a>
       <a href="#">The Midnight main</a>
       <a href="#">Charlie Charlie</a>
-      <a href="#">Oujia Board</a>
+      <a href="#">Ouija Board</a>
       <a href="#">The Elevator Game</a>
       <a href="#">The bus to nowhere</a>
       <a href="#">Daruma Game</a>
       <!-- <a href="#"></a> -->
 
+
     </div>
+
+  </div>    <!-- top container end-->
+
+    <h4 class="b-t">Back to Top</h4>
+
+
+    <footer>
+        <h4>&#x000A9; Ryan Quintana</h4>
+    </footer>
 
 
 
