--- a/Ghost Stories site/html/gs-head.html
+++ b/Ghost Stories site/html/gs-head.html
@@ -21,12 +21,26 @@
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/gs.css">
 
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+
+  <script type="text/javascript">
+    $(document).ready(function(){
+      $(".b-t").click(function(){
+            document.body.scrollTop = 0; // For Chrome, Safari and Opera
+            document.documentElement.scrollTop = 0; // For IE and Firefox
+          })
+    });
+
+
+  </script>
+
   </head>
 
   <body>
+    <div class="top">
 
     <nav>
-      <a href="index (main) .html">
+      <a href="index(main).html">
         <img src="../pic/a-ghost-story.jpeg" alt="gh logo">
 
         <h1>Ghost Stories </h1>
@@ -37,9 +51,9 @@
       <div class="links">
         <a href="gs.html">Submitted Ghost Stories</a>
         <a href="myth.html">Myths and Urban Legends</a>
-        <a href="games.html">Spiritual games / rituals</a>
+        <a href="games.html">Spiritual Games / Rituals</a>
         <a href="places.html">Famous Haunted Place</a>
-        <a href="sumbit.html">Submit Your own Stories</a>
+        <a href="sumbit.html">Submit Your Own Stories</a>
         <!-- <a href="#">Books</a> -->
         <!-- <a href="#"></a> -->
       </div>
@@ -49,13 +63,14 @@
     <div class="main">
 
         <div class="left">
+
           <ul>
-            <a href="#"> <li>Top Ghost Stories</li> </a>
-            <a href="#"> <li>5 Star Stories</li> </a>
-            <a href="#"> <li>4 Star Stories</li> </a>
-            <a href="#"> <li>3 Star Stories</li> </a>
-            <a href="#"> <li>2 Star Stories</li> </a>
-            <a href="#"> <li>1 Star Stories</li> </a>
+             <li> <a href="#"> Top Ghost Stories </a></li>
+             <li> <a href="#"> 5 Star Stories </a></li>
+             <li> <a href="#"> 4 Star Stories </a></li>
+             <li> <a href="#"> 3 Star Stories </a></li>
+             <li> <a href="#"> 2 Star Stories </a></li>
+             <li> <a href="#"> 1 Star Stories </a></li>
           </ul>
 
         </div>      <!-- left contianer end -->
@@ -81,6 +96,16 @@
 
 
     </div>    <!-- Main end -->
+
+
+  </div>    <!-- top container end-->
+
+    <h4 class="b-t">Back to Top</h4>
+
+
+    <footer>
+        <h4>&#x000A9; Ryan Quintana</h4>
+    </footer>
 
   </body>
 </html>
