--- a/Ghost Stories site/html/gs.html
+++ b/Ghost Stories site/html/gs.html
@@ -21,11 +21,25 @@
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/gs.css">
 
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+
+  <script type="text/javascript">
+    $(document).ready(function(){
+      $(".b-t").click(function(){
+            document.body.scrollTop = 0; // For Chrome, Safari and Opera
+            document.documentElement.scrollTop = 0; // For IE and Firefox
+          })
+    });
+
+
+  </script>
+
   </head>
   <body>
+    <div class="top">
 
     <nav>
-      <a href="index (main) .html">
+      <a href="index(main).html">
         <img src="../pic/a-ghost-story.jpeg" alt="gh logo">
 
         <h1>Ghost Stories </h1>
@@ -36,9 +50,9 @@
       <div class="links">
         <a href="gs.html">Submitted Ghost Stories</a>
         <a href="myth.html">Myths and Urban Legends</a>
-        <a href="games.html">Spiritual games / rituals</a>
+        <a href="games.html">Spiritual Games / Rituals</a>
         <a href="places.html">Famous Haunted Place</a>
-        <a href="sumbit.html">Submit Your own Stories</a>
+        <a href="sumbit.html">Submit Your Own Stories</a>
         <!-- <a href="#">Books</a> -->
         <!-- <a href="#"></a> -->
       </div>
@@ -49,12 +63,12 @@
 
       <div class="left">
         <ul>
-          <a href="#"> <li>Top Ghost Stories</li> </a>
-          <a href="#"> <li>5 Star Stories</li> </a>
-          <a href="#"> <li>4 Star Stories</li> </a>
-          <a href="#"> <li>3 Star Stories</li> </a>
-          <a href="#"> <li>2 Star Stories</li> </a>
-          <a href="#"> <li>1 Star Stories</li> </a>
+           <li> <a href="#"> Top Ghost Stories </a></li>
+           <li> <a href="#"> 5 Star Stories </a></li>
+           <li> <a href="#"> 4 Star Stories </a></li>
+           <li> <a href="#"> 3 Star Stories </a></li>
+           <li> <a href="#"> 2 Star Stories </a></li>
+           <li> <a href="#"> 1 Star Stories </a></li>
         </ul>
 
       </div>      <!-- left contianer end -->
@@ -72,9 +86,10 @@
            <a href="gs-head.html"> <h3>The Headless Ghost</h3> </a>
            <a href="#"> <h3>Don't Go into the Basement</h3> </a>
            <a href="#"> <h3>That's not my mother </h3> </a>
-           <a href="#"> <h3>A Freindly Ghost </h3>   </a>
+           <a href="#"> <h3>A Friendly Ghost </h3>   </a>
            <a href="#"> <h3>My son's Ghost Friends</h3> </a>
            <a href="#"> <h3>New House Problems </h3> </a>
+
 
 
           <!-- <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras non nunc justo. Fusce posuere imperdiet sapien. Sed eget ex nec nulla vestibulum vestibulum. Sed ultrices tellus sed sapien tempor mollis. Nulla vel diam a purus luctus condimentum. Mauris elementum nisl sit amet sem porttitor dictum. Curabitur maximus sollicitudin augue eu suscipit. Maecenas tincidunt rutrum mollis. Duis ac ante magna. Duis a luctus massa, id ornare nunc. Curabitur vehicula sed lectus in imperdiet. Aliquam erat volutpat. Vestibulum eu massa nibh.</p>
@@ -84,7 +99,17 @@
       </div>      <!-- right contianer end -->
 
 
-    </div>
+    </div>    <!-- main container end -->
+
+
+  </div>    <!-- top container end-->
+
+    <h4 class="b-t">Back to Top</h4>
+
+
+    <footer>
+        <h4>&#x000A9; Ryan Quintana</h4>
+    </footer>
 
 
 
