--- a/Ghost Stories site/html/myth-eye.html
+++ b/Ghost Stories site/html/myth-eye.html
@@ -21,12 +21,27 @@
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/gs.css">
 
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+
+  <script type="text/javascript">
+    $(document).ready(function(){
+      $(".b-t").click(function(){
+            document.body.scrollTop = 0; // For Chrome, Safari and Opera
+            document.documentElement.scrollTop = 0; // For IE and Firefox
+          })
+    });
+
+
+  </script>
+
   </head>
 
   <body>
+    <div class="top">
+
 
     <nav>
-      <a href="index (main) .html">
+      <a href="index(main).html">
         <img src="../pic/a-ghost-story.jpeg" alt="gh logo">
 
         <h1>Ghost Stories </h1>
@@ -37,9 +52,9 @@
       <div class="links">
         <a href="gs.html">Submitted Ghost Stories</a>
         <a href="myth.html">Myths and Urban Legends</a>
-        <a href="games.html">Spiritual games / rituals</a>
+        <a href="games.html">Spiritual Games / Rituals</a>
         <a href="places.html">Famous Haunted Place</a>
-        <a href="sumbit.html">Submit Your own Stories</a>
+        <a href="sumbit.html">Submit Your Own Stories</a>
         <!-- <a href="#">Books</a> -->
         <!-- <a href="#"></a> -->
       </div>
@@ -50,12 +65,13 @@
 
         <div class="left">
           <ul>
-            <a href="#"> <li>Top Myths and Legends</li> </a>
-            <a href="#"> <li>5 Star Stories</li> </a>
-            <a href="#"> <li>4 Star Stories</li> </a>
-            <a href="#"> <li>3 Star Stories</li> </a>
-            <a href="#"> <li>2 Star Stories</li> </a>
-            <a href="#"> <li>1 Star Stories </li> </a>
+            <li> <a href="#"> Top Myths and Legends </a></li>
+            <li> <a href="#"> 5 Star Stories </a></li>
+            <li> <a href="#"> 4 Star Stories </a></li>
+            <li> <a href="#"> 3 Star Stories </a></li>
+            <li> <a href="#"> 2 Star Stories </a></li>
+            <li> <a href="#"> 1 Star Stories </a></li>
+
           </ul>
 
         </div>      <!-- left contianer end -->
@@ -64,11 +80,12 @@
 
       <h1>The Black Eyed Children</h1>
 
-      <p>The Black Eyed Children is an urban legend about unknown creatures that show in the form of children from the ages of 6 to 16.  They look different but they all have pale skin and pure black eyes with no irisis</p>
+      <p>The Black Eyed Children is an urban legend about unknown creatures that show in the form of children from the ages of 6 to 16.  They look different but they all have pale skin and pure black eyes with no irises</p>
 
-      <p>The first sighting of these "children" was by Brian Bethel in 1996, and since then the tales of these creatues has only spread. These children have been seen hitchhiking asking for car rides or on front porches asking to come inside.  Often to use a phone to call their mother or a ride home.</p>
+      <p>The first sighting of these "children" was by Brian Bethel in 1996, and since then the tales of these creatures has only spread. These children have been seen hitchhiking asking for car rides or on front porches asking to come inside.  Often to use a phone to call their mother or a ride home.</p>
 
-      <p>They will ask to come inside your house or car, as people have reported the children saying they needed to be invited to come inside.  People always feel extreme fear and terror when they see the childrens eyes, and pets are always terrified of them. It is unknown what happens if you let in any of these children, but people that have seen these children feel as if they are the predators and we are the prey.  </p>
+      <p>They will ask to come inside your house or car, as people have reported the children saying they needed to be invited to come inside.  People always feel extreme fear and terror when they see the children’s eyes, and pets are always terrified of them. It is unknown what happens if you let in any of these children, but people that have seen these children feel as if they are the predators and we are the prey.  </p>
+
 
       <hr>
       <fieldset class="rating">
@@ -83,6 +100,15 @@
 
 
     </div>    <!-- Main end -->
+
+
+  </div>    <!-- top container end-->
+    <h4 class="b-t">Back to Top</h4>
+
+
+    <footer>
+        <h4>&#x000A9; Ryan Quintana</h4>
+    </footer>
 
   </body>
 </html>
