--- a/Ghost Stories site/html/myth.html
+++ b/Ghost Stories site/html/myth.html
@@ -21,11 +21,26 @@
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/gs.css">
 
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+
+  <script type="text/javascript">
+    $(document).ready(function(){
+      $(".b-t").click(function(){
+            document.body.scrollTop = 0; // For Chrome, Safari and Opera
+            document.documentElement.scrollTop = 0; // For IE and Firefox
+          })
+    });
+
+
+  </script>
+
   </head>
   <body>
+    <div class="top">
+
 
     <nav>
-      <a href="index (main) .html">
+      <a href="index(main).html">
         <img src="../pic/a-ghost-story.jpeg" alt="gh logo">
 
         <h1>Ghost Stories </h1>
@@ -36,9 +51,9 @@
       <div class="links">
         <a href="gs.html">Submitted Ghost Stories</a>
         <a href="myth.html">Myths and Urban Legends</a>
-        <a href="games.html">Spiritual games / rituals</a>
+        <a href="games.html">Spiritual Games / Rituals</a>
         <a href="places.html">Famous Haunted Place</a>
-        <a href="sumbit.html">Submit Your own Stories</a>
+        <a href="sumbit.html">Submit Your Own Stories</a>
         <!-- <a href="#">Books</a> -->
         <!-- <a href="#"></a> -->
       </div>
@@ -49,12 +64,13 @@
 
       <div class="left">
         <ul>
-          <a href="#"> <li>Top Myths and Legends</li> </a>
-          <a href="#"> <li>5 Star Stories</li> </a>
-          <a href="#"> <li>4 Star Stories</li> </a>
-          <a href="#"> <li>3 Star Stories</li> </a>
-          <a href="#"> <li>2 Star Stories</li> </a>
-          <a href="#"> <li>1 Star Stories </li> </a>
+          <li> <a href="#"> Top Myths and Legends </a></li>
+          <li> <a href="#"> 5 Star Stories </a></li>
+          <li> <a href="#"> 4 Star Stories </a></li>
+          <li> <a href="#"> 3 Star Stories </a></li>
+          <li> <a href="#"> 2 Star Stories </a></li>
+          <li> <a href="#"> 1 Star Stories </a></li>
+
         </ul>
 
       </div>      <!-- left contianer end -->
@@ -67,12 +83,13 @@
           <!-- <li></li> -->
            <a href="myth-eye.html"> <h3>The Black Eyed Children</h3> </a>
            <a href="#"> <h3>Bloody Mary </h3> </a>
-           <a href="#"> <h3>Windego </h3> </a>
+           <a href="#"> <h3>Wendigo </h3> </a>
            <a href="#"> <h3>Slender Man </h3>   </a>
            <a href="#"> <h3>The Russian Sleep Experiment </h3> </a>
            <a href="#"> <h3>Gateway of the Mind </h3> </a>
            <a href="#"> <h3>Julia </h3> </a>
            <!-- <a href="#"> <h3>Julia </h3> </a> -->
+
 
 
 
@@ -84,8 +101,17 @@
       </div>      <!-- right contianer end -->
 
 
-    </div>
+    </div>    <!-- main container end -->
 
+
+  </div>    <!-- top container end-->
+
+    <h4 class="b-t">Back to Top</h4>
+
+
+    <footer>
+        <h4>&#x000A9; Ryan Quintana</h4>
+    </footer>
 
 
 
