--- a/Ghost Stories site/html/sumbit.html
+++ b/Ghost Stories site/html/sumbit.html
@@ -21,12 +21,26 @@
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/submit.css">
 
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+
+  <script type="text/javascript">
+    $(document).ready(function(){
+      $(".b-t").click(function(){
+            document.body.scrollTop = 0; // For Chrome, Safari and Opera
+            document.documentElement.scrollTop = 0; // For IE and Firefox
+          })
+    });
+
+
+  </script>
+
   </head>
 
   <body>
+    <div class="top">
 
     <nav>
-      <a href="index (main) .html">
+      <a href="index(main).html">
         <img src="../pic/a-ghost-story.jpeg" alt="gh logo">
 
         <h1>Ghost Stories </h1>
@@ -38,9 +52,9 @@
       <div class="links">
         <a href="gs.html">Submitted Ghost Stories</a>
         <a href="myth.html">Myths and Urban Legends</a>
-        <a href="games.html">Spiritual games / rituals</a>
+        <a href="games.html">Spiritual Games / Rituals</a>
         <a href="places.html">Famous Haunted Place</a>
-        <a href="sumbit.html">Submit Your own Stories</a>
+        <a href="sumbit.html">Submit Your Own Stories</a>
         <!-- <a href="#">Books</a> -->
         <!-- <a href="#"></a> -->
       </div>
@@ -48,7 +62,7 @@
     </nav>
     <div class="contain">
 
-      <h3>If you want to submit your own ghost/paranormal experiences or anything out of the ordinary please email me at <a href="mailto:ryanq214@yahoo.com">ryanq214@yahoo.com</a></h3>
+      <h3>If you want to submit your own ghost/paranormal experiences, anything out of the ordinary, or if you want to contact me for any reason please email me at <a href="mailto:ryanq214@yahoo.com">ryanq214@yahoo.com</a></h3>
 
       <h4>Please put "Add Ghost Story" in the subject line to make it easier for me to find. </h4>
 
@@ -57,6 +71,15 @@
       <h4>If want you can include or name or if you would rather remain anonymous let me know and it will be listed as such.</h4>
 
     </div>
+
+  </div>    <!-- top container end-->
+
+    <h4 class="b-t">Back to Top</h4>
+
+
+    <footer>
+        <h4>&#x000A9; Ryan Quintana</h4>
+    </footer>
 
 
   </body>
