--- a/Ghost Stories site/html/games-bm.html
+++ b/Ghost Stories site/html/games-bm.html
@@ -1,9 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Ghost Stories/games/bloody mary</title>
     <meta name="description" content="Bloody Mary is a well known game that is played to summon an evil spirt known as Bloody Mary.  The game has...">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
+
 
 
     <!-- normalize link -->
