--- a/Ghost Stories site/html/gs-head.html
+++ b/Ghost Stories site/html/gs-head.html
@@ -5,6 +5,10 @@
     <title>Ghost Stories/ghost-stories/headless ghost</title>
     <meta name="description" content="Read the ghost stories of the headless ghost.">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
+
+
     <!-- normalize link -->
     <link rel="stylesheet" href="../css/normalize.css">
 
