--- a/Ghost Stories site/html/gs.html
+++ b/Ghost Stories site/html/gs.html
@@ -5,6 +5,10 @@
     <title>Ghost Stories/ghost-stories</title>
     <meta name="description" content="Read ghost stories from other people. Look at the latest ones, browse through the top ghost stories, or...">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
+
+
     <!-- normalize link -->
     <link rel="stylesheet" href="../css/normalize.css">
 
