--- a/Ghost Stories site/html/index(main).html
+++ b/Ghost Stories site/html/index(main).html
@@ -5,6 +5,9 @@
     <title>Ghost Stories</title>
     <meta name="description" content="Read through ghost stories, myths, and 'games' you can play, or submit you own personal ghost stories.">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
+
 
     <!-- normalize link -->
     <link rel="stylesheet" href="../css/normalize.css">
