--- a/Ghost Stories site/html/myth.html
+++ b/Ghost Stories site/html/myth.html
@@ -5,6 +5,9 @@
     <title>Ghost Stories/myths</title>
     <meta name="description" content="Read through the many myths and urban legends of spirits, the paranormal, and other others.">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
+
     <!-- normalize link -->
     <link rel="stylesheet" href="../css/normalize.css">
 
