--- a/Ghost Stories site/html/places-poveglia.html
+++ b/Ghost Stories site/html/places-poveglia.html
@@ -5,6 +5,9 @@
     <title>Ghost Stories/places/Poveglia</title>
     <meta name="description" content="Read about the pague island Poveglia, known as the most haunted island in the world.">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
+
 
     <!-- normalize link -->
     <link rel="stylesheet" href="../css/normalize.css">
