--- a/Ghost Stories site/html/places.html
+++ b/Ghost Stories site/html/places.html
@@ -5,6 +5,8 @@
     <title>Ghost Stories/places</title>
     <meta name="description" content="Look at many of the most famous haunted locations in the world.  Such as the plauge island Poveglia, the island of dolls..">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
     <!-- normalize link -->
     <link rel="stylesheet" href="../css/normalize.css">
