--- a/Ghost Stories site/html/sumbit.html
+++ b/Ghost Stories site/html/sumbit.html
@@ -5,6 +5,9 @@
     <title>Ghost Stories/submit-your-stories</title>
     <meta name="description" content="Sumbit your own stories of ghosts, the paranormal, the strand, and scary">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
+
     <!-- normalize link -->
     <link rel="stylesheet" href="../css/normalize.css">
 
