--- a/Ghost Stories site/html/games.html
+++ b/Ghost Stories site/html/games.html
@@ -5,6 +5,11 @@
     <title>Ghost Stories/games</title>
     <meta name="description" content="Read several ghost 'games' and rituals that you can play.">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="viewport" content="width=device-width">
+
+
 
     <!-- normalize link -->
     <link rel="stylesheet" href="../css/normalize.css">
@@ -23,7 +28,7 @@
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 
-  <script type="text/javascript">
+    <script type="text/javascript">
     $(document).ready(function(){
       $(".b-t").click(function(){
             document.body.scrollTop = 0; // For Chrome, Safari and Opera
@@ -32,7 +37,7 @@
     });
 
 
-  </script>
+    </script>
 
   </head>
   <body>
@@ -85,7 +90,7 @@
 
     </div>
 
-  </div>    <!-- top container end-->
+    </div>    <!-- top container end-->
 
     <h4 class="b-t">Back to Top</h4>
 
