--- a/Ghost Stories site/html/myth-eye.html
+++ b/Ghost Stories site/html/myth-eye.html
@@ -5,6 +5,9 @@
     <title>Ghost Stories/myths/The-Black-Eyed-Children</title>
     <meta name="description" content="Read the myth of the black eyed children. An urban legend about unknown creatures that show in the form of children from the... ">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
+
     <!-- normalize link -->
     <link rel="stylesheet" href="../css/normalize.css">
 
